<resources>
    <string name="app_name">FlightReviewsSubmit</string>
    <string name="rate_flight_header">How do you rate the %1$s?</string>
    <string name="submit_header">How do you rate the overall flight experience?</string>
    <string name="submit_check_box">There were no food</string>
    <string name="submit_title_comment">Leave any feedback</string>
    <string name="submit_hint_comment">Share your experience. How was the seat? How was the food? Any tips?</string>
    <string name="submit_button">Submit</string>
    <string name="crowded_header">How crowded was the flight</string>
    <string name="info_flight_race_date">LH 3495 &#8226; 26 Mar 2019</string>
    <string name="info_flight_from_to">SFO &#10132; CDG</string>
    <string name="alert_dialog_quit_message">Do you want to close app?</string>
    <string name="alert_dialog_quit_title">Quit</string>
</resources>