<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".ui.fragment.SubmitFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/SubmitActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/submit_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/dark_blue"
                app:layout_collapseMode="pin">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/exit_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:src="@drawable/ic_close_24"
                    android:background="@android:color/transparent"/>

            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:layout_marginBottom="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_flight_60"
                app:layout_collapseMode="pin"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="115dp"
                app:layout_collapseMode="parallax">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/main_header_submit_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:gravity="center"
                    android:text="@string/submit_header"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/info_race_date_submit_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/info_flight_race_date"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/info_direction_submit_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/info_flight_from_to"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/average_rate_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:max="6"
                    android:numStars="5"
                    android:stepSize="1"
                    android:theme="@style/RatingBarStars" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rating_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_rate_flight" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/food_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:text="@string/submit_check_box" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:padding="3dp"
                android:text="@string/submit_title_comment"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/feedback_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/submit_hint_comment"
                android:importantForAutofill="no"
                android:inputType="none" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/small_margin"
                android:background="@drawable/submit_button_shape"
                android:text="@string/submit_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/submit_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/small_margin"
                android:visibility="gone"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_margin"
        android:background="@drawable/submit_topbar_shape"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="bottom"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>