<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.appbar.CollapsingToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    app:layout_scrollFlags="scroll|exitUntilCollapsed">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/submit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_blue"
        app:layout_collapseMode="pin">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/exit_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close_24" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/logo_icon_submit_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_flight_60"
        android:translationZ="3dp"
        app:layout_collapseMode="pin" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="115dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_collapseMode="parallax">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_header_submit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/submit_header"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info_race_date_submit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_flight_race_date"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info_direction_submit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/info_flight_from_to"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/average_rate_bar"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:max="6"
            android:numStars="5"
            android:stepSize="1"
            android:theme="@style/RatingBarStars" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.appbar.CollapsingToolbarLayout>